fix: Contrast level adjustment for "danger"-box anchor-tag

--- a/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_common/cradmin_extensions/alerts.less
+++ b/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_common/cradmin_extensions/alerts.less
@@ -16,5 +16,9 @@
         color: #fff;
       }
     }
+
+    a {
+      color: @devilry-brand-color-danger-light4;
+    }
   }
 }
